fix: removes logic from period to refenrence_date
