# resources/transactions/repo.go
@@ -27,9 +27,9 @@ func NewTransactionsRepo(db utils.Executer) TransactionsRepo {
 func (r *TransactionsRepoImpl) CreateEntry(payload CreateEntryDTO, db utils.Executer) (Entry, error) {
 
 	query, args, err := squirrel.Insert("entries").
-		Columns("id", "transaction_id", "amount", "period").
-		Values(ulid.Make().String(), payload.TransactionID, payload.Amount, payload.Period).
-		Suffix("RETURNING id, transaction_id, amount, period, created_at").
+		Columns("id", "transaction_id", "amount", "reference_date").
+		Values(ulid.Make().String(), payload.TransactionID, payload.Amount, payload.ReferenceDate).
+		Suffix("RETURNING id, transaction_id, amount, reference_date, created_at").
 		PlaceholderFormat(squirrel.Dollar).
 		ToSql()
 	if err != nil {
@@ -41,7 +41,7 @@ func (r *TransactionsRepoImpl) CreateEntry(payload CreateEntryDTO, db utils.Exec
 		&entry.ID,
 		&entry.TransactionID,
 		&entry.Amount,
-		&entry.Period,
+		&entry.ReferenceDate,
 		&entry.CreatedAt,
 	)
 	return entry, err
@@ -72,7 +72,7 @@ func (r *TransactionsRepoImpl) CreateTransaction(payload CreateTransactionDTO, d
 }
 
 func (r *TransactionsRepoImpl) ListViewEntries(db utils.Executer, filter *utils.FilterBuilder) ([]ViewEntry, error) {
-	query := squirrel.Select("id", "transaction_id", "name", "description", "amount", "period", "user_id", "category", "total_amount", "installment", "total_installments", "created_at").
+	query := squirrel.Select("id", "transaction_id", "name", "description", "amount", "period", "user_id", "category", "total_amount", "installment", "total_installments", "created_at", "reference_date").
 		From("v_entries").
 		PlaceholderFormat(squirrel.Dollar)
 
@@ -111,6 +111,7 @@ func (r *TransactionsRepoImpl) ListViewEntries(db utils.Executer, filter *utils.
 			&entry.Installment,
 			&entry.TotalInstallments,
 			&entry.CreatedAt,
+			&entry.ReferenceDate,
 		); err != nil {
 			return nil, err
 		}
